# mjpg-streamer

./: .gitignore  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  Makefile  build.sh  build_for_ultimaker.sh  mjpg_streamer.c
docker_env/: Dockerfile  buildenv_check.sh
plugins/input_http/: mjpg-proxy.c
plugins/input_uvc/: input_uvc.c  v4l2uvc.c  v4l2uvc.h
plugins/output_viewer/: Makefile  output_viewer.c
scripts/: make_deb.sh
www/: index.html
